--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,20 @@
   <head>
     <title>Portfolio</title>
     <meta charset="utf-8">
+    <meta property="og:title" content="Titre de votre page ou article" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.votre-site.com/page.html" />
+    <meta property="og:image" content="https://www.votre-site.com/images/illustration.jpg" />
+    <meta property="og:description" content="Brève description de votre contenu." />
+    <meta property="og:site_name" content="Nom de votre site" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Titre de votre page ou article" />
+    <meta name="twitter:description" content="Brève description de votre contenu." />
+    <meta name="twitter:image" content="https://www.votre-site.com/images/illustration.jpg" />
+    <meta name="twitter:site" content="@VotreCompteTwitter" />
+    <meta name="twitter:creator" content="@AuteurDuContenu" />
     <link href="https://fonts.cdnfonts.com/css/cooper-black" rel="stylesheet">
   </head>
   <body>
